--- a/MediumClone/Views/SignIn/Create.cshtml
+++ b/MediumClone/Views/SignIn/Create.cshtml
@@ -11,7 +11,7 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create" asp-controller="SignIn">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="UserName"class="control-label"></label>
                 <input asp-for="UserName" class="form-control" />
