--- a/MediumClone/Views/Home/_AddCategoryToAuthorPartial.cshtml
+++ b/MediumClone/Views/Home/_AddCategoryToAuthorPartial.cshtml
@@ -13,5 +13,6 @@
       }
    </select>
    <br />
-  <input  value="Kategori Ekle" onclick="AddCategoryToUser()" class="btn btn-primary" />                       
+  <button onclick="AddCategoryToUser()" class="btn btn-primary">Kategori Ekle</button>
+  <button onclick="CloseAddCategoryToUser()" class="btn btn-primary">Kategori Ekranını Kapat</button>  
 
