--- a/MediumClone/Views/Shared/_Layout.cshtml
+++ b/MediumClone/Views/Shared/_Layout.cshtml
@@ -33,7 +33,14 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="SignIn" asp-action="Create">SignIn</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddArticle">Write Article</a>
+                            @if(User?.Identity?.IsAuthenticated ?? false)
+                            {
+                              <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddArticle">Write Article</a>
+                            }
+                            else
+                            {
+                              <a class="nav-link text-dark" asp-area="" asp-controller="SignIn" asp-action="Create">Write Article</a>  
+                            }
                         </li>
                     </ul>                    
                 </div>
