--- a/MediumClone/Views/Home/ChangeImage.cshtml
+++ b/MediumClone/Views/Home/ChangeImage.cshtml
@@ -5,6 +5,7 @@
 }
 <h3> Upload An Image</h3>
 <hr />
+<div asp-validation-summary="All"></div>
 <div class="row">
     <div class="col-md-4">
         <form asp-action="ChangeImage" asp-controller="Home" enctype="multipart/form-data">
@@ -16,12 +17,14 @@
                 
             </div> 
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Add Photo" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
+<form asp-action="DeleteImage" method="post">
 <div>
-    <a asp-action="Index">Back to List</a>
+    <input type="submit" value="Delete" class="btn btn-primary" />
 </div>
+</form>
