--- a/MediumClone/Views/Home/UserIndex.cshtml
+++ b/MediumClone/Views/Home/UserIndex.cshtml
@@ -10,7 +10,9 @@
   <a class="btn btn-primary" asp-action="AddArticle"> Makale Ekle </a>
    <a class="btn btn-primary" asp-action="MyArticles" asp-route-id="@Model.Id"> Makalelerim </a>
    <a class="btn btn-primary" asp-action="UserPage" asp-route-id="@Model.Id"> Sayfam </a>
-    <a class="btn btn-primary" asp-action="ChangeImage" asp-route-id="@Model.Id"> Profil fotoğrafı Değiştir </a>
+    <a class="btn btn-primary" asp-controller="Home" asp-action="ChangeImage" asp-route-id="@Model.Id"> Profil fotoğrafı Değiştir </a>
+    <a class="btn btn-primary" asp-controller="Home" asp-action="EditUserPage" asp-route-id="@Model.Id"> Bilgilerimi Güncelle </a>
+    
 
 @if ( Model.InterestedArticles.Count()>0)
 {
